fix: route에 jwt 적용방식 수정
